--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -1,10 +1,10 @@
 <div class="header_and_footer">
   <div id="footer">
-    <a href="http://github.com/nabeta/enju_leaf/wiki">Next-L Enju Leaf</a>,
+    <a href="http://github.com/nabeta/enju_flower/wiki">Next-L Enju Flower</a>,
     <%= t('page.open_source_integrated_library_system') -%> |
-    <%= link_to t('page.about_this_system'), "page_about_path" -%> |
-    <%= link_to t('page.add_on'), "page_add_on_path" -%> |
-    <%= link_to t('page.report_bugs'), "http://github.com/nabeta/enju_leaf/issues" -%>
+    <%= link_to t('page.about_this_system'), page_about_path -%> |
+    <%= link_to t('page.add_on'), page_add_on_path -%> |
+    <%= link_to t('page.report_bugs'), "http://github.com/nabeta/enju_flower/issues" -%>
     <br />
     Developed by <a href="http://mwr.mediacom.keio.ac.jp/~tanabe/">Kosuke Tanabe</a> and <a href="http://www.next-l.jp/">Project Next-L</a> |
     Powered by 
