expiring fragment cache

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -78,7 +78,7 @@
 </p>
 -->
 
-<%- cache(:controller => :items, :action => :show, :id => @item.id, :role => current_user_role_name, :locale => @locale) do -%>
+<%- cache(:controller => :items, :action => :show, :id => @item.id, :page => 'detail', :role => current_user_role_name, :locale => @locale) do -%>
 <%- if can? :update, @item -%>
   <p>
     <strong><%= t('item.donor') -%>:</strong>
