--- a/app/views/patrons/show.html.erb
+++ b/app/views/patrons/show.html.erb
@@ -50,7 +50,7 @@
       <%- if @patron.user -%>
         <tr>
           <td><strong><%= t('activerecord.attributes.user.username') -%>:</strong></td>
-          <td><%= link_to h(@patron.user.username), edit_user_path(@patron.user.username) -%></td>
+          <td><%= link_to h(@patron.user.username), @patron.user -%></td>
         </tr>
       <%- end -%>
       <tr>
