--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -41,26 +41,23 @@
               <li style="display: none"><%= link_to_custom_book_jacket(@manifestation, picture_file) -%></li>
             <%- end -%>
           <%- else -%>
-            <%- next if i == 0 -%>
-            <%- if i == 1 -%>
-              <li><%= link_to_custom_book_jacket(@manifestation, picture_file) -%></li>
-            <%- else -%>
+            <%- if i > 0 -%>
               <li style="display: none"><%= link_to_custom_book_jacket(@manifestation, picture_file) -%></li>
-            <%- end -%>
+            <% end %>
           <%- end -%>
         <%- end -%>
         <li><%= link_to t('page.listing', :model => t('activerecord.models.picture_file')), manifestation_picture_files_path(@manifestation) -%></li>
-        <%- if current_user.try(:has_role?, 'Librarian') -%>
+        <%- if can? :create, PictureFile -%>
           <li><%= link_to t('page.new', :model => t('activerecord.models.picture_file')), new_manifestation_picture_file_path(@manifestation) -%></li>
         <%- end -%>
       </ul>
       <script type="text/javascript">
         $(document).ready(function(){
-          $("a[rel='resource_<%= @manifestation.id -%>']").colorbox({transition:"none"});
+          $("a[rel='manifestation_<%= @manifestation.id -%>']").colorbox({transition:"none"});
         })
       </script>
     <%- else -%>
-      <%- if current_user.try(:has_role?, 'Librarian') -%>
+      <%- if can? :create, PictureFile -%>
         <ul>
           <li><%= link_to t('page.new', :model => t('activerecord.models.picture_file')), new_manifestation_picture_file_path(@manifestation) -%></li>
         </ul>
@@ -127,7 +124,7 @@
             <%- end -%>
           </ul>
           <li><%= link_to t('manifestation.add_derivation'), manifestation_manifestations_path(@manifestation, :mode => 'add') -%></li>
-          <li><%= link_to t('page.listing', :model => t('activerecord.models.subject')), work_subjects_path(@manifestation) -%></h1>
+          <li><%= link_to t('page.listing', :model => t('activerecord.models.subject')), work_subjects_path(@manifestation) -%></li>
           <li><%= link_to t('manifestation.edit_item'), manifestation_items_path(@manifestation) -%></li>
         </ul>
       <%- end -%>
