added spec files

--- a/app/views/users/_edit_credential.html.erb
+++ b/app/views/users/_edit_credential.html.erb
@@ -29,9 +29,7 @@
       </p>
     <% end %>
 
-  <%- end -%>
-
-  <%- if current_user.has_role?('Librarian') and current_user != @user -%>
+  <%- elsif current_user.has_role?('Librarian') and current_user != @user -%>
     <p>
       <%= f.label t('activerecord.attributes.user.email') -%>
       <%= f.email_field :email, :class => 'resource_email' -%>
@@ -53,11 +51,11 @@
   </p>
   
   <p>
-    <%= f.label t('activerecord.attributes.user.deactivated') -%>
+    <%= f.label t('activerecord.attributes.user.locked') -%>
     <%- if @user.check_update_own_account(current_user) -%>
-      <%= f.check_box :deactivated, :disabled => 'disabled' -%>
+      <%= f.check_box :locked, :disabled => 'disabled' -%>
     <%- else -%>
-      <%= f.check_box :deactivated -%>
+      <%= f.check_box :locked -%>
     <%- end -%>
   </p>
 
