added jquerymobile files

--- a/app/views/layouts/manifestations.mobile.erb
+++ b/app/views/layouts/manifestations.mobile.erb
@@ -1,11 +1,8 @@
 <!DOCTYPE html> 
 <html> 
 <head> 
-  <title><%= resource_title(@manifestation, controller.action_name) %></title>
-  <link rel="stylesheet" href="/stylesheets/pagination.css" />
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-  <script src="http://code.jquery.com/jquery-1.5.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
+<title><%= resource_title(@manifestation, controller.action_name) %></title>
+<%= render 'page/mobile' %>
 </head> 
 <body>
 
