--- a/app/views/layouts/application.mobile.erb
+++ b/app/views/layouts/application.mobile.erb
@@ -2,10 +2,7 @@
 <html> 
 <head> 
 <title><%= title(controller.controller_name) %></title>
-  <link rel="stylesheet" href="/stylesheets/pagination.css" />
-  <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.css" />
-  <script src="http://code.jquery.com/jquery-1.5.min.js"></script>
-  <script src="http://code.jquery.com/mobile/1.0a3/jquery.mobile-1.0a3.min.js"></script>
+<%= render 'page/mobile' %>
 </head> 
 <body>
 
