added jQuery renderer for pagination

--- a/app/views/manifestations/index.mobile.erb
+++ b/app/views/manifestations/index.mobile.erb
@@ -18,4 +18,4 @@
 <% end %>
 </ul>
 
-<%= will_paginate(@manifestations) %>
+<%= will_paginate(@manifestations, :renderer => WillPaginateJqueryMobileRenderer) %>
