--- a/app/views/page/_mobile.mobile.erb
+++ b/app/views/page/_mobile.mobile.erb
@@ -1,3 +1,3 @@
 <%= javascript_include_tag 'jquery.min', 'jquery.mobile-1.0a3.min',
   :include => 'inculde_jquerymobile' %>
-<%= stylesheet_link_tag 'jquery.mobile-1.0a3.min', 'pagination' %>
+<%= stylesheet_link_tag 'jquery.mobile-1.0a3.min' %>
