--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -1,6 +1,6 @@
 <div class="header_and_footer">
   <div id="footer">
-    <a href="http://github.com/nabeta/enju_flower/wiki">Next-L Enju Flower</a>,
+    <a href="http://github.com/nabeta/enju_flower/wiki">Next-L Enju Flower <%= EnjuFlower.version %></a>,
     <%= t('page.open_source_integrated_library_system') -%> |
     <%= link_to t('page.about_this_system'), page_about_path -%> |
     <%= link_to t('page.add_on'), page_add_on_path -%> |
