--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -1,11 +1,11 @@
   <%= render 'page/tabview' -%>
   <div id="tabs">
-    <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'detail', :role => current_user_role_name, :locale => @locale) do %>
     <%= render :partial => 'manifestations/tab_menu', :locals => {:manifestation => manifestation} %>
     <div id="detail">
       <%- if manifestation.isbn -%>
         <%= google_book_search_preview(manifestation.isbn) -%>
       <%- end -%>
+    <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'detail', :role => current_user_role_name, :locale => @locale, :manifestation_id => nil) do %>
       <table id="resource_detail">
         <%= embed_content(manifestation) -%>
         <%- if manifestation.serial? -%>
@@ -46,7 +46,7 @@
           <td><%= t('manifestation.physical_description') -%>:</td>
           <td>
             <%- if manifestation.number_of_pages -%>
-              <%= manifestation.number_of_pages -%> p. 
+              <%= manifestation.number_of_pages -%> p.
               (<%= manifestation.start_page -%> - <%= manifestation.end_page -%>)
             <%- end -%>
             <!-- TODO: センチメートル以外の単位 -->
@@ -130,6 +130,7 @@
           </td>
         </tr>
       </table>
+    <% end %>
       <%- if manifestation.items.on_shelf.exists? -%>
         <%= render :partial => 'manifestations/show_holding', :locals => {:manifestation => manifestation} -%>
       <%- end -%>
@@ -138,6 +139,5 @@
       <%= render :partial => 'manifestations/bookmarks_for_this_manifestation', :locals => {:manifestation => manifestation} -%>
 
     </div>
-    <% end %>
     <%= render :partial => 'manifestations/tab_list', :locals => {:manifestation => manifestation} %>
   </div>
