--- a/app/views/page/_header.html.erb
+++ b/app/views/page/_header.html.erb
@@ -1,15 +1,16 @@
 <div class="header_and_footer">
   <div id="header_left">
-    <% cache("library_group_header_#{@locale.to_s}") do %>
-      <h1><a href="/" title="<%= LibraryGroup.site_config.display_name.localize -%>"><%= LibraryGroup.site_config.display_name.localize -%></a></h1>
-    <% end %>
+    <div id="library_system_name">
+      <h1 class="resource_title"><%= link_to LibraryGroup.system_name(@locale), root_path, :title => LibraryGroup.system_name(@locale) %></h1>
+    </div>
+    <div id="header_micro_advertisement"></div>
   </div>
 
   <div id="header_advertisement"></div>
-  <%= render 'page/select_locale' -%>
 
   <div id="header_right">
-    <%- if user_signed_in? -%>
+    <div id="user_account">
+      <% if user_signed_in? %>
         <%= t('page.logged_in_as', :login_name => current_user.username) -%>
         <br />
         <%= link_to image_tag('icons/email.png', :size => '16x16', :alt => t('activerecord.models.message')), user_messages_path(current_user) %>
@@ -20,8 +21,13 @@
         <% end %>
         <%= link_to t('page.account'), edit_user_path(current_user) -%>
         <%= link_to t('page.sign_out'), destroy_user_session_path -%>
-    <%- else -%>
-      <%= link_to t('page.sign_in'), new_user_session_path -%>
-    <%- end -%>
+        <br />
+      <% else %>
+        <% unless controller_name == 'sessions' %>
+          <%= link_to t('page.sign_in'), new_user_session_path -%>
+        <% end %>
+      <% end %>
+    </div>
+    <%= render 'page/select_locale' -%>
   </div>
 </div>
