--- a/app/views/manifestations/_show_holding.html.erb
+++ b/app/views/manifestations/_show_holding.html.erb
@@ -1,4 +1,5 @@
-<table style="width: 100%">
+<div id="holding">
+<table class="holding">
   <tr>
     <th><%= t('activerecord.models.library') -%></th>
     <th><%= t('activerecord.models.shelf') -%></th>
@@ -6,20 +7,21 @@
     <th><%= t('activerecord.attributes.item.item_identifier') -%></th>
     <th><%= t('activerecord.models.circulation_status') -%></th>
   </tr>
+  <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'holding', :role => current_user_role_name, :locale => @locale, :manifestation_id => nil) do %>
   <%- manifestation.items.on_shelf.each do |item| -%>
     <tr>
       <td>
         <%= link_to item.shelf.library.display_name.localize, item.shelf.library %>
       </td>
       <td>
-        <%= link_to item.shelf.display_name.localize, item.shelf -%>
+        <%= link_to item.shelf_display_name.localize, item.shelf -%>
         <%= render :partial => 'items/shelf_picture', :locals => {:item => item} -%>
       </td>
       <td>
         <%= item.call_number -%>
       </td>
       <td>
-        <%- unless item.item_identifier.blank? -%>
+        <%- if item.item_identifier? -%>
           <%= link_to item.item_identifier, item -%>
         <%- else -%>
           (<%= link_to t('item.no_number'), item -%>)
@@ -36,4 +38,6 @@
       </td>
     </tr>
   <%- end -%>
+  <%- end -%>
 </table>
+</div>
