--- a/app/views/manifestations/_show_index.mobile.erb
+++ b/app/views/manifestations/_show_index.mobile.erb
@@ -10,6 +10,6 @@
   <%= image_tag('icons/newspaper.png', :size => '16x16', :alt => t('manifestation.serial')) if manifestation.serial? -%>
   <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
   <br />
-  <div id="author_list_<%= manifestation.id -%>">
-    <%= render :partial => 'manifestations/show_authors', :locals => {:manifestation => manifestation} -%>
+  <div id="creator_list_<%= manifestation.id -%>">
+    <%= render :partial => 'manifestations/show_creators', :locals => {:manifestation => manifestation} -%>
   </div>
