--- a/app/views/page/_include.html.erb
+++ b/app/views/page/_include.html.erb
@@ -1,6 +1,4 @@
-<%= stylesheet_link_tag 'yui/cssreset/reset-min',
-  'yui/cssfonts/fonts-min',
-  'yui/cssbase/base-min',
+<%= stylesheet_link_tag 'html5-doctor-reset-stylesheet.min',
   'scaffold_modified', 'enju', 'acts_as_taggable_stylesheet',
   'formtastic', 'formtastic_changes', 'colorbox', 'pagination',
   :cache => 'include'
@@ -10,9 +8,11 @@
   :cache => 'include_jquery'
 %>
 <%= stylesheet_link_tag 'portlets' %>
+<%= stylesheet_link_tag 'enju_print', :media => :print %>
 <%= javascript_include_tag :defaults,
   'jquery.highlight-3', 'jquery.hotkeys', 'jquery.colorbox-min',
   'jquery.cookie', 'fg.menu', 'fg.menu.enju', 'pagination',
   :cache => 'include'
 %>
 <%= csrf_meta_tag %>
+<%= render :partial => 'page/locale_menu' %>
