--- a/app/views/patrons/show.html.erb
+++ b/app/views/patrons/show.html.erb
@@ -1,5 +1,5 @@
 <div id="content_detail" class="ui-corner-all">
-<% cache(:controller => :patrons, :action => :show, :id => @patron.id, :page => 'detail', :role => current_user_role_name, :locale => @locale) do %>
+<% cache(:controller => :patrons, :action => :show, :id => @patron.id, :page => 'detail', :role => current_user_role_name, :locale => @locale, :patron_id => nil) do %>
 <h1 class="title"><%= t('page.showing', :model => t('activerecord.models.patron')) -%></h1>
 <div id="content_list">
   <h2 class="resource_title">
@@ -66,7 +66,7 @@
       <tr>
         <td><strong><%= t('activerecord.attributes.patron.url') -%>:</strong></td>
         <td>
-          <%= link_to @patron.url, @patron.url, :class => 'url' -%>
+          <%= link_to @patron.url, @patron.url, :class => 'url' if @patron.url? -%>
         </td>
       </tr>
       <tr>
@@ -122,14 +122,14 @@
           <td><strong><%= t('activerecord.attributes.patron.address_2_note') -%>:</strong></td>
           <td><%= @patron.address_2_note -%></td>
         </tr>
-        <tr>
-          <td><strong><%= t('activerecord.attributes.patron.date_of_birth') -%>:</strong></td>
-          <td><%= l(@patron.date_of_birth) if @patron.date_of_birth -%></td>
-        </tr>
-        <%- if @patron.user and current_user.try(:has_role?, 'Administrator') %>
+        <%- if !@patron.user or (@patron.user and current_user.try(:has_role?, 'Administrator')) %>
+          <tr>
+            <td><strong><%= t('activerecord.attributes.patron.date_of_birth') -%>:</strong></td>
+            <td><%= l(@patron.date_of_birth, :format => :only_date) if @patron.date_of_birth -%></td>
+          </tr>
           <tr>
             <td><strong><%= t('activerecord.attributes.patron.date_of_death') -%>:</strong></td>
-            <td><%= l(@patron.date_of_death) if @patron.date_of_death -%></td>
+            <td><%= l(@patron.date_of_death, :format => :only_date) if @patron.date_of_death -%></td>
           </tr>
         <% end %>
       <%- end -%>
@@ -166,27 +166,27 @@
 </div>
 
 <div id="submenu" class="ui-corner-all">
-    <%- if @patron.picture_files.exists? -%>
-      <div id="manifestation_book_jacket">
-        <%= patron_custom_book_jacket(@patron) -%>
-      </div>
-      <ul>
-        <%- @patron.picture_files.each_with_index do |picture_file, i| -%>
-          <% if i > 0 %>
-            <li style="display: none"><%= link_to_custom_book_jacket(@patron, picture_file) -%></li>
-          <% end %>
-        <%- end -%>
-        <li><%= link_to t('page.listing', :model => t('activerecord.models.picture_file')), patron_picture_files_path(@patron) -%></li>
-        <%- if can? :create, PictureFile -%>
-          <li><%= link_to t('page.new', :model => t('activerecord.models.picture_file')), new_patron_picture_file_path(@patron) -%></li>
+  <%- if @patron.picture_files.exists? -%>
+    <div id="manifestation_book_jacket">
+      <%= patron_custom_book_jacket(@patron) -%>
+    </div>
+    <ul>
+      <%- @patron.picture_files.each_with_index do |picture_file, i| -%>
+        <% if i > 0 %>
+          <li style="display: none"><%= link_to_custom_book_jacket(@patron, picture_file) -%></li>
         <% end %>
-      </ul>
-      <script type="text/javascript">
-        $(document).ready(function(){
-          $("a[rel='patron_<%= @patron.id -%>']").colorbox({transition:"none"});
-        })
-      </script>
-    <%- end -%>
+      <%- end -%>
+      <li><%= link_to t('page.listing', :model => t('activerecord.models.picture_file')), patron_picture_files_path(@patron) -%></li>
+      <%- if can? :create, PictureFile -%>
+        <li><%= link_to t('page.new', :model => t('activerecord.models.picture_file')), new_patron_picture_file_path(@patron) -%></li>
+      <% end %>
+    </ul>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $("a[rel='patron_<%= @patron.id -%>']").colorbox({transition:"none"});
+      })
+    </script>
+  <%- end -%>
   <ul>
     <li><%= link_to t('page.back'), patrons_path -%></li>
     <%- if can? :create, User -%>
