added picture_file helper

--- a/public/stylesheets/enju.css
+++ b/public/stylesheets/enju.css
@@ -385,6 +385,10 @@ input.date_field{
   ime-mode: disabled;
 }
 
+input.date_text_field{
+  width: 80px;
+}
+
 input.short_name{
   ime-mode: disabled;
 }
