--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -2,7 +2,7 @@
 <h1 class="title"><%= t('page.listing', :model => t('activerecord.models.item')) -%></h1>
 <div id="content_list">
 
-<%= render :partial => 'manifestations/title', :locals => {:manifestation => @resource} if @resource -%>
+<%= render :partial => 'manifestations/title', :locals => {:manifestation => @manifestation} if @manifestation -%>
 
 <%= form_for :items, :url => items_path, :html => {:method => 'get'} do -%>
   <p>
