--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -8,7 +8,7 @@
     <% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'detail', :role => current_user_role_name, :locale => @locale, :manifestation_id => nil) do %>
       <table id="resource_detail">
         <%= embed_content(manifestation) -%>
-        <%- if manifestation.serial? -%>
+        <%- if manifestation.series_statement -%>
           <tr>
             <td style="width: 200px"><%= t('manifestation.serial') -%>:</td>
             <td style="width: 490px"><%= link_to manifestation.series_statement.original_title, manifestation.series_statement -%>
@@ -17,21 +17,26 @@
             <%- end -%>
             </td>
           </tr>
-          <tr>
-            <td><%= t('page.number') -%>:</td>
-            <td>
+        <% end %>
+        <tr>
+          <td><%= t('page.number') -%>:</td>
+          <td>
+            <%- if manifestation.edition? -%>
+              <%= t('activerecord.attributes.manifestation.edition') -%>: <%= manifestation.edition -%>
+            <%- end -%>
+            <%- if manifestation.series_statement -%>
               <%- unless manifestation.volume_number.blank? -%>
-                <%= t('activerecord.attributes.manifestation.volume_number_list') -%>: <%= manifestation.volume_number.join("/") -%>
+                <%= t('activerecord.attributes.manifestation.volume_number_list') -%>: <%= manifestation.volume_number_list -%>
               <%- end -%>
               <%- unless manifestation.issue_number_list.blank? -%>
-                <%= t('manifestation.issue_number') -%>: <%= manifestation.issue_number.join("/") -%>
+                <%= t('manifestation.issue_number') -%>: <%= manifestation.issue_number_list -%>
               <%- end -%>
               <%- unless manifestation.serial_number_list.blank? -%>
-                <%= t('manifestation.serial_number') -%>: <%= manifestation.serial_number.join("/") -%>
+                <%= t('manifestation.serial_number') -%>: <%= manifestation.serial_number_list -%>
               <%- end -%>
-            </td>
-          </tr>
-        <%- end -%>
+            <%- end -%>
+          </td>
+        </tr>
         <tr>
           <td style="width: 200px"><%= t('page.form') -%>:</td>
           <td style="width: 500px">
@@ -40,13 +45,13 @@
         </tr>
         <tr>
           <td><%= t('activerecord.models.language') -%>:</td>
-          <td><%= manifestation.language.display_name.localize -%></td>
+          <td><span itemprop="inLanguage"><%= manifestation.language.display_name.localize -%></span></td>
         </tr>
         <tr>
           <td><%= t('manifestation.physical_description') -%>:</td>
           <td>
             <%- if manifestation.number_of_pages -%>
-              <%= manifestation.number_of_pages -%> p.
+              <span itemprop="numPages"><%= manifestation.number_of_pages -%></span> p.
               (<%= manifestation.start_page -%> - <%= manifestation.end_page -%>)
             <%- end -%>
             <!-- TODO: センチメートル以外の単位 -->
@@ -82,7 +87,7 @@
             <td><%= t('page.identifier') -%>:</td>
             <td>
               <%- if manifestation.isbn.present? -%>
-                ISBN: <%= manifestation.isbn -%>
+                ISBN: <span itemprop="isbn"><%= manifestation.isbn -%></span>
                 <%- if manifestation.isbn10.present? -%>
                   ( <%= manifestation.isbn10 -%> )
                 <%- end -%>
