--- a/app/views/manifestations/_title.mobile.erb
+++ b/app/views/manifestations/_title.mobile.erb
@@ -1,4 +1,4 @@
-<%- cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'title', :role => current_user_role_name, :locale => @locale) do %>
+<%- cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'title', :role => current_user_role_name, :locale => @locale, :manifestation_id => nil) do %>
   <h2 class="resource_title">
     [M]
     <%= link_to manifestation.original_title, manifestation -%>
@@ -6,16 +6,16 @@
   </h2>
   <p>
     <%- if manifestation.creators.readable_by(current_user).exists? -%>
-      <%= t('patron.creator') -%>: <%= raw patrons_list(manifestation.creators.readable_by(current_user)) -%>
+      <%= t('patron.creator') -%>: <%= patrons_list(manifestation.creators.readable_by(current_user)) -%>
     <%- end -%>
     <%- if manifestation.contributors.readable_by(current_user).exists? -%>
-      <%= t('patron.contributor') -%>: <%= raw patrons_list(manifestation.contributors.readable_by(current_user)) -%>
+      <%= t('patron.contributor') -%>: <%= patrons_list(manifestation.contributors.readable_by(current_user)) -%>
     <%- end -%>
     <%- if manifestation.publishers.readable_by(current_user).exists? -%>
-      <%= t('patron.publisher') -%>: <%= raw patrons_list(manifestation.publishers.readable_by(current_user)) -%>
+      <%= t('patron.publisher') -%>: <%= patrons_list(manifestation.publishers.readable_by(current_user)) -%>
     <% end %>
-    <%- if manifestation.date_of_publication -%>
-      (<%= manifestation.date_of_publication.strftime('%Y') -%>)
+    <%- if manifestation.pub_date.present? -%>
+      (<%= manifestation.pub_date -%>)
     <%- end -%>
     <%- unless manifestation.access_address.blank? -%>
       <br />
