--- a/app/views/manifestations/_show_index.html.erb
+++ b/app/views/manifestations/_show_index.html.erb
@@ -1,15 +1,24 @@
+<% cache(:controller => :manifestations, :action => :show, :id => manifestation.id, :page => 'show_index', :role => current_user_role_name, :locale => @locale, :manifestation_id => nil) do %>
   <strong><%= link_to manifestation.original_title, manifestation -%></strong>
-  <%- if manifestation.serial? -%>
-    <%= manifestation.volume_number_list -%>
-    <%- unless manifestation.issue_number_list.blank? -%>
-      (<%= manifestation.issue_number_list -%>)
+  <% if manifestation.serial? %>
+    <%= manifestation.volume_number_list %>
+    <% if manifestation.issue_number_list.present? %>
+      (<%= manifestation.issue_number_list %>)
+    <% end %>
+    <%= manifestation.serial_number_list %>
+  <% end %>
+  <% if manifestation.periodical_master? %>
+    <%- if manifestation.series_statement.try(:first_issue) and manifestation.series_statement.try(:latest_issue) -%>
+      <%= manifestation.series_statement.first_issue.date_of_publication.try(:year) -%>
+      -
+      <%= manifestation.series_statement.latest_issue.date_of_publication.try(:year) -%>
     <%- end -%>
-    <%= manifestation.serial_number_list -%>
   <%- end -%>
   <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
   <%= image_tag('icons/newspaper.png', :size => '16x16', :alt => t('manifestation.serial')) if manifestation.serial? -%>
   <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
   <br />
   <div id="creator_list_<%= manifestation.id -%>">
-    <%= render :partial => 'manifestations/show_creators', :locals => {:manifestation => manifestation} -%>
+    <%= render 'manifestations/show_creators', :manifestation => manifestation -%>
   </div>
+<% end %>
