--- a/app/views/page/_include.html.erb
+++ b/app/views/page/_include.html.erb
@@ -3,7 +3,7 @@
   'colorbox', 'pagination',
   :cache => 'include'
 %>
-<%= stylesheet_link_tag 'smoothness/jquery-ui-1.8.13.custom',
+<%= stylesheet_link_tag 'smoothness/jquery-ui-1.8.14.custom',
   'smoothness/fg.menu', 'smoothness/fg.menu.button',
   :cache => 'include_jquery'
 %>
@@ -15,4 +15,4 @@
   :cache => 'include'
 %>
 <%= csrf_meta_tag %>
-<%= render :partial => 'page/locale_menu' %>
+<%= render 'page/locale_menu' %>
